--- a/estilosCSS/equipos.css
+++ b/estilosCSS/equipos.css
@@ -165,6 +165,23 @@ a:hover {
   align-items: center;
   text-align: center;
   color: whitesmoke;
+  overflow: hidden;
+}
+
+.presentacion::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.55); /* Ajusta el 0.55 según el nivel de oscuridad que desees */
+  z-index: 1;
+}
+
+.presentacion .contenido {
+  position: relative;
+  z-index: 2;
 }
 
 .titulo {
